fix: resolve layout shift caused by loader

--- a/app/globals.css
+++ b/app/globals.css
@@ -175,7 +175,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 overflow-x-hidden;
   }
   body {
     @apply bg-background text-foreground;
